# fed-mostlyai-engine

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  mkdocs.yml  mkdocs_pygments_hook.py  pyproject.toml
.github/workflows/: pre-commit-check.yml  release-1-bump.yml  release-2-publish.yml  run-tests-cpu.yaml  run-tests-gpu.yaml  workflow.yaml
examples/: language.ipynb
mostlyai/engine/: __init__.py  _common.py  analysis.py  training.py
mostlyai/engine/_encoding_types/language/: categorical.py
mostlyai/engine/_encoding_types/tabular/: categorical.py  character.py  datetime.py  numeric.py
mostlyai/engine/_language/: common.py  generation.py  interface.py  lstm.py  training.py  xgrammar_hf_logits.py  xgrammar_utils.py
mostlyai/engine/_language/engine/: hf_engine.py  vllm_engine.py
mostlyai/engine/_tabular/: argn.py  common.py  generation.py  training.py
tests/end_to_end/: conftest.py  reporting.py  test_federated_convergence.py  test_language_federated_convergence.py  test_tabular_federated_convergence.py  test_tabular_federated_data_quality.py  test_tabular_flat.py  test_tabular_sequential.py  test_tabular_validate.py
tests/unit/: test_analysis.py  test_training_validate.py  test_xgrammar_utils.py
tests/unit/encoding_types/language/: test_categorical.py
tests/unit/encoding_types/tabular/: test_categorical.py  test_numeric.py
